[gd_scene load_steps=5 format=3 uid="uid://c8t8l58ian5m7"]

[ext_resource type="Script" uid="uid://2sbl46g4prf0" path="res://UserInterface/MainMenu.gd" id="1_wexeh"]
[ext_resource type="Texture2D" uid="uid://8qdg7bp1irfe" path="res://UserInterface/titlescreen.png" id="2_5v0ow"]

[sub_resource type="LabelSettings" id="LabelSettings_a05hv"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_wexeh"]
font_size = 32

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wexeh")
first_game_scene = "res://Levels/lostburg_ground.tscn"

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.30323282, 0.30323282, 0.30323282, 1)

[node name="TextureRect" type="TextureRect" parent="Background"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -300.0
offset_right = 800.0
offset_bottom = 300.0
grow_vertical = 2
texture = ExtResource("2_5v0ow")
expand_mode = 3
stretch_mode = 4

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MainContainer"]
layout_mode = 2
text = "DIM SPIRITS"
label_settings = SubResource("LabelSettings_a05hv")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "New Game"

[node name="ContinueButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Continue"

[node name="LoadGameButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Load Game"

[node name="SettingsButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"

[node name="QuitButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="SaveSlotPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SaveSlotPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SaveSlotPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SaveSlotPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Save Slot"
label_settings = SubResource("LabelSettings_wexeh")

[node name="HSeparator" type="HSeparator" parent="SaveSlotPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="SaveSlotPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveSlotsContainer" type="VBoxContainer" parent="SaveSlotPanel/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="SaveSlotPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="SaveSlotPanel/MarginContainer/VBoxContainer/Button" to="." method="_close_save_slot_selection"]
